# autoresearch-agents

./: .gitignore
.claude/: settings.local.json
Project1-Financial_Autoagentic_System/: .env.example  .gitignore  README.md  autoagent-architecture.md  evaluate.py  optimizer_program.md  pyproject.toml
Project1-Financial_Autoagentic_System/agents/: llm.py  pipeline.py
Project1-Financial_Autoagentic_System/agents/skills/: analyst.md  extractor.md  synthesizer.md
Project1-Financial_Autoagentic_System/data/filings/: aapl_10k.txt  amzn_10k.txt  cat_10k.txt  hd_10k.txt  jnj_10k.txt  meta_10k.txt  msft_10k.txt  nvda_10k.txt  pfe_10k.txt  tsla_10k.txt  unh_10k.txt  wmt_10k.txt  xom_10k.txt
Project1-Financial_Autoagentic_System/data/ground_truth/: aapl.json  amzn.json  bac.json  cat.json  hd.json  jnj.json  jpm.json  meta.json  msft.json  nvda.json  pfe.json  tsla.json  unh.json  wmt.json  xom.json
Project1-Financial_Autoagentic_System/scripts/: debug_edgar.py  fetch_filings.py  run_optimizer.ps1  run_optimizer.sh
Project2-AutoRAG/: .gitignore  AUTORAG_ROADMAP.md  config.yaml  evaluate.py  optimizer_program.md  project2-architecture.md  pyproject.toml
Project2-AutoRAG/agents/: config.py  llm.py  pipeline.py  rag.py
Project2-AutoRAG/agents/skills/: answer_generator.md  answer_validator.md  query_classifier.md  query_rewriter.md
Project2-AutoRAG/data/crag/: dev.jsonl  test.jsonl
Project2-AutoRAG/scripts/: build_index.py  download_crag.py  run_optimizer.ps1  run_optimizer.sh
